more development related to interval mode background transitions along w/ transitions between general modes; fixed issue where invisible question icon could be clicked on mobile

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -100,6 +100,7 @@
 }
 
 #questionIcon {
+    display: none;
     opacity: 0;
     transform: scale(0.85);
     transition: opacity 1s ease-in-out;
