--- a/src/css/space.css
+++ b/src/css/space.css
@@ -31,3 +31,7 @@
     color: white;
     font-family: myFont2;
 }
+
+.no-transition {
+    transition: none !important; /* Override to remove transition */
+}
